tests/syntax_error/chained_eq.jou
from "stdlib/io.jou" import printf

def main() -> int:
    printf("%d\n", 1 == 2 == 3)  # Error: comparisons cannot be chained
